apps/traefik/post-install/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.local.asztalos.net`) && PathPrefix(`/api/`)
      priority: 25  # Higher than your main route
      services:
        - name: api@internal
          kind: TraefikService
    - match: Host(`traefik.local.asztalos.net`)
      kind: Rule
      priority: 20
      middlewares:
        - name: authentik
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: local-asztalos-net-tls
